--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -84,6 +84,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=WebApplicationTest.war
+war.name=CPIT455Project.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
